kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observability-app
  namespace: observability
  labels:
    app: observability
spec:
  replicas: 2
  selector:
    matchLabels:
      app: observability
  template:
    metadata:
      labels:
        app: observability
    spec:
      containers:
      - name: observability-app
        image: divyashree1129/observability:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
