kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: observability-service
  namespace: observability
spec:
  selector:
    app: observability
  ports:
    - protocol: TCP
      port: 3000        # Cluster port
      targetPort: 3000  # Pod port
  type: LoadBalancer
